fix #main visible in fullscreen
better positioning of hamburger menu

--- a/ve_main.css
+++ b/ve_main.css
@@ -9,7 +9,7 @@
  */
 /* remove vivaldi's header gradient and make splash less obnoxious */
 body {
-    background-color: black !important;
+    background-color: darkgrey !important;
     --colorAccentBgDark: transparent !important;
 }
 /* add a 1px window border that persists when native window is disabled */
@@ -56,12 +56,12 @@ body {
 /* when tabs are not standard, merge address bar with header */
 #browser:not(.tabs-top) #titlebar {z-index: 1;}
 #browser:not(.tabs-top) #titlebar #pagetitle {display: none;}
-#browser:not(.tabs-top) #main {margin-top: -25px;}
+#browser:not(.tabs-top) #main {margin-top: -24px;}
 #browser:not(.tabs-top) .toolbar-addressbar {padding: 0 150px 0 35px;}
 #browser:not(.tabs-top) .vivaldi {top: 2px;}
 #browser:not(.tabs-top) .burger-icon {
     position: relative;
-    top: 3px;
+    top: 1px;
 }
 #browser.address-top.tabs-off .vivaldi {top: 5.5px;}
 /* when tabs are not standard and address bar is bottom, redisplay titlebar and reset address bar margins */
@@ -77,6 +77,10 @@ body {
 #browser:not(.tabs-top).address-off #main,
 #browser:not(.tabs-top).address-bottom #main {
     margin-top: 0;
+}
+#browser:not(.tabs-top).address-off.fullscreen #main,
+#browser:not(.tabs-top).address-bottom.fullscreen #main {
+    margin-top: -1px;
 }
 #browser:not(.tabs-top).address-off .vivaldi,
 #browser:not(.tabs-top).address-bottom .vivaldi {
